# qutecode

./: CMakeLists.txt
libqrcode/: bits.cpp  bits.h  code.cpp  code.h  encoding.cpp  encoding.h  error_correction.cpp  field.cpp  field.h  metadata.cpp  metadata.h  pixel.cpp  pixel.h  plan.cpp  plan.h  poly_utils.h  qr.cpp  qr.h
